HBASE-26899 Run spotless:apply
Closes #4312