@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -15,7 +15,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.apache.hadoop.hbase.util;
 
 import java.io.BufferedReader;
@@ -27,17 +26,13 @@ import java.lang.management.OperatingSystemMXBean;
 import java.lang.management.RuntimeMXBean;
 import java.lang.reflect.Method;
 import java.nio.charset.StandardCharsets;
-
 import org.apache.yetus.audience.InterfaceAudience;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-
 /**
- * This class is a wrapper for the implementation of
- * com.sun.management.UnixOperatingSystemMXBean
- * It will decide to use the sun api or its own implementation
- * depending on the runtime (vendor) used.
+ * This class is a wrapper for the implementation of com.sun.management.UnixOperatingSystemMXBean It
+ * will decide to use the sun api or its own implementation depending on the runtime (vendor) used.
  */
 
 @InterfaceAudience.Private
@@ -46,34 +41,29 @@ public class JVM {
   private OperatingSystemMXBean osMbean;
 
   private static final boolean ibmvendor =
-      System.getProperty("java.vendor") != null &&
-          System.getProperty("java.vendor").contains("IBM");
+    System.getProperty("java.vendor") != null && System.getProperty("java.vendor").contains("IBM");
   private static final boolean windows =
-      System.getProperty("os.name") != null &&
-          System.getProperty("os.name").startsWith("Windows");
+    System.getProperty("os.name") != null && System.getProperty("os.name").startsWith("Windows");
   private static final boolean linux =
-      System.getProperty("os.name") != null &&
-          System.getProperty("os.name").startsWith("Linux");
+    System.getProperty("os.name") != null && System.getProperty("os.name").startsWith("Linux");
   private static final boolean amd64 =
-      System.getProperty("os.arch") != null &&
-          System.getProperty("os.arch").contains("amd64");
+    System.getProperty("os.arch") != null && System.getProperty("os.arch").contains("amd64");
 
   private static final String JVMVersion = System.getProperty("java.version");
 
   /**
-   * The raw String of java specification version.
-   * "1.8" for java8, "9","10"... for Java 9, 10...
+   * The raw String of java specification version. "1.8" for java8, "9","10"... for Java 9, 10...
    */
   private static final String JVM_SPEC_VERSION_STRING =
     System.getProperty("java.specification.version");
 
   /**
-   * The Integer represent of JVM_SPEC_VERSION, for the JVM version comparison.
-   * Java 8, 9, 10 ... will be noted as 8, 9 10 ...
+   * The Integer represent of JVM_SPEC_VERSION, for the JVM version comparison. Java 8, 9, 10 ...
+   * will be noted as 8, 9 10 ...
    */
-  private static final int JVM_SPEC_VERSION = JVM_SPEC_VERSION_STRING.contains(".") ?
-    (int) (Float.parseFloat(JVM_SPEC_VERSION_STRING) * 10 % 10) :
-    Integer.parseInt(JVM_SPEC_VERSION_STRING);
+  private static final int JVM_SPEC_VERSION = JVM_SPEC_VERSION_STRING.contains(".")
+    ? (int) (Float.parseFloat(JVM_SPEC_VERSION_STRING) * 10 % 10)
+    : Integer.parseInt(JVM_SPEC_VERSION_STRING);
 
   /**
    * Constructor. Get the running Operating System instance
@@ -84,7 +74,6 @@ public class JVM {
 
   /**
    * Check if the OS is unix.
-   *
    * @return whether this is unix or not.
    */
   public static boolean isUnix() {
@@ -96,7 +85,6 @@ public class JVM {
 
   /**
    * Check if the OS is linux.
-   *
    * @return whether this is linux or not.
    */
   public static boolean isLinux() {
@@ -105,7 +93,6 @@ public class JVM {
 
   /**
    * Check if the arch is amd64;
-   *
    * @return whether this is amd64 or not.
    */
   public static boolean isAmd64() {
@@ -114,7 +101,6 @@ public class JVM {
 
   /**
    * Check if the finish() method of GZIPOutputStream is broken
-   *
    * @return whether GZIPOutputStream.finish() is broken.
    */
   public static boolean isGZIPOutputStreamFinishBroken() {
@@ -126,11 +112,9 @@ public class JVM {
   }
 
   /**
-   * Load the implementation of UnixOperatingSystemMXBean for Oracle jvm
-   * and runs the desired method.
-   *
+   * Load the implementation of UnixOperatingSystemMXBean for Oracle jvm and runs the desired
+   * method.
    * @param mBeanMethodName : method to run from the interface UnixOperatingSystemMXBean
-   *
    * @return the method result
    */
   private Long runUnixMXBeanMethod(String mBeanMethodName) {
@@ -146,17 +130,16 @@ public class JVM {
         return (Long) mBeanMethod.invoke(unixos);
       }
     } catch (Exception e) {
-      LOG.warn("Not able to load class or method for" +
-          " com.sun.management.UnixOperatingSystemMXBean.", e);
+      LOG.warn(
+        "Not able to load class or method for" + " com.sun.management.UnixOperatingSystemMXBean.",
+        e);
     }
     return null;
   }
 
   /**
-   * Get the number of opened filed descriptor for the runtime jvm.
-   * If Oracle java, it will use the com.sun.management interfaces.
-   * Otherwise, this methods implements it (linux only).
-   *
+   * Get the number of opened filed descriptor for the runtime jvm. If Oracle java, it will use the
+   * com.sun.management interfaces. Otherwise, this methods implements it (linux only).
    * @return number of open file descriptors for the jvm
    */
   public long getOpenFileDescriptorCount() {
@@ -170,15 +153,14 @@ public class JVM {
     InputStreamReader inputStreamReader = null;
     BufferedReader bufferedReader = null;
     try {
-      //need to get the PID number of the process first
+      // need to get the PID number of the process first
       RuntimeMXBean rtmbean = ManagementFactory.getRuntimeMXBean();
       String rtname = rtmbean.getName();
       String[] pidhost = rtname.split("@");
 
-      //using linux bash commands to retrieve info
-      Process p = Runtime.getRuntime().exec(
-          new String[]{"bash", "-c",
-              "ls /proc/" + pidhost[0] + "/fdinfo | wc -l"});
+      // using linux bash commands to retrieve info
+      Process p = Runtime.getRuntime()
+        .exec(new String[] { "bash", "-c", "ls /proc/" + pidhost[0] + "/fdinfo | wc -l" });
       inputStream = p.getInputStream();
       inputStreamReader = new InputStreamReader(inputStream, StandardCharsets.UTF_8);
       bufferedReader = new BufferedReader(inputStreamReader);
@@ -222,9 +204,9 @@ public class JVM {
   }
 
   /**
-   * @return the physical free memory (not the JVM one, as it's not very useful as it depends on
-   * the GC), but the one from the OS as it allows a little bit more to guess if the machine is
-   * overloaded or not).
+   * @return the physical free memory (not the JVM one, as it's not very useful as it depends on the
+   *         GC), but the one from the OS as it allows a little bit more to guess if the machine is
+   *         overloaded or not).
    */
   public long getFreeMemory() {
     if (ibmvendor) {
@@ -235,13 +217,11 @@ public class JVM {
     return (r != null ? r : -1);
   }
 
-
   /**
    * Workaround to get the current number of process running. Approach is the one described here:
    * http://stackoverflow.com/questions/54686/how-to-get-a-list-of-current-open-windows-process-with-java
    */
-  @edu.umd.cs.findbugs.annotations.SuppressWarnings(
-      value = "RV_DONT_JUST_NULL_CHECK_READLINE",
+  @edu.umd.cs.findbugs.annotations.SuppressWarnings(value = "RV_DONT_JUST_NULL_CHECK_READLINE",
       justification = "used by testing")
   public int getNumberOfRunningProcess() {
     if (!isUnix()) {
@@ -261,7 +241,7 @@ public class JVM {
       while (bufferedReader.readLine() != null) {
         count++;
       }
-      return count - 1; //  -1 because there is a headline
+      return count - 1; // -1 because there is a headline
     } catch (IOException e) {
       return -1;
     } finally {
@@ -290,10 +270,8 @@ public class JVM {
   }
 
   /**
-   * Get the number of the maximum file descriptors the system can use.
-   * If Oracle java, it will use the com.sun.management interfaces.
-   * Otherwise, this methods implements it (linux only).
-   *
+   * Get the number of the maximum file descriptors the system can use. If Oracle java, it will use
+   * the com.sun.management interfaces. Otherwise, this methods implements it (linux only).
    * @return max number of file descriptors the operating system can use.
    */
   public long getMaxFileDescriptorCount() {
@@ -305,8 +283,8 @@ public class JVM {
     InputStream in = null;
     BufferedReader output = null;
     try {
-      //using linux bash commands to retrieve info
-      Process p = Runtime.getRuntime().exec(new String[]{"bash", "-c", "ulimit -n"});
+      // using linux bash commands to retrieve info
+      Process p = Runtime.getRuntime().exec(new String[] { "bash", "-c", "ulimit -n" });
       in = p.getInputStream();
       output = new BufferedReader(new InputStreamReader(in, StandardCharsets.UTF_8));
       String maxFileDesCount;
